--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -14,6 +14,37 @@ a {
   }
 }
 
+@keyframes placeHolderShimmer{
+  0%{
+      background-position: -1000px 0
+  }
+  100%{
+      background-position: 1000px 0
+  }
+}
+
+.animated-background {
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-name: placeHolderShimmer;
+  animation-timing-function: linear;
+  background: #f6f7f8;
+  background: linear-gradient(to right, #eeeeee 8%, #dddddd 18%, #eeeeee 33%);
+  background-size: 100% 104px;
+  height: 96px;
+  position: relative;
+}
+
+.table-loading {
+  .table-loading-row {
+    height: 56px;
+    margin-top: 8px;
+    @extend .animated-background;
+  }
+
+}
+
 .is-loading {
   position: relative;
   pointer-events: none;
