--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -7,14 +7,15 @@ html.wf-robotocondensed-n4-active.wf-robotocondensed-n7-active {
 
 .logo img {
   max-width: 100%;
+  max-height: 100%;
 }
 .logo {
-  height: 200px;
+  height: 250px;
   &.logo-background {
-    background-image: url('~assets/images/slogan-larger.svg');
+    background-image: url('~assets/images/slogan-larger.png');
     background-size: contain;
     background-position: center;
-    padding-bottom: 55%;
+    padding-bottom: 60%;
     background-repeat: no-repeat;
   }
 }
