--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -20,6 +20,10 @@ html.wf-robotocondensed-n4-active.wf-robotocondensed-n7-active {
   }
 }
 
+.logo-small {
+  height: 200px;
+}
+
 a {
   text-decoration: none;
 
@@ -422,3 +426,89 @@ footer {
     }
   }
 }
+
+.list-talent {
+  background: #f5f5f5;
+  padding: 25px;
+  border-radius: 1rem;
+  .talent-list-content{
+    padding: 15px 20px 20px 20px;
+    background: #fff;
+    margin: 0;
+    border-radius: 15px;
+    flex: 1;
+    overflow: hidden;
+  }
+  .talent-list-item {
+    display: flex;
+    @media only screen and (max-width: 500px) {
+      flex-direction: column;
+      background: #fff;
+      border-radius: 15px;
+    }
+  
+  }
+  .talent-list-img {
+    flex: 0 0 190px;
+    margin-right: 15px;
+    >div {
+      padding-bottom: 100%;
+      background-size: cover;
+      background-position: center;
+      border-radius: 15px;
+    }
+    @media only screen and (max-width: 500px) {
+      margin-right: 0;
+    }
+  }
+  .talent-list-title {
+    a{
+      color: #000;
+    }
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 15px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    img {
+      background: #ffcb05;
+      width: 25px;
+      margin-right: 10px;
+    }
+  }
+  .talent-list-des {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    margin-bottom: 15px;
+    height: 70px;
+  }
+  .talent-list-btn{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    a {
+      color: #222;
+      border-bottom: 1px solid;
+      font-weight: bold;
+      &:hover {
+        text-decoration: none;
+      }
+    }
+    .vote {
+      display: flex;
+      div {
+        display: flex;
+        align-items: center;
+      }
+      img {
+        width: 15px;
+        margin-right: 5px;
+      }
+    }
+  }
+}
+
