--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -45,6 +45,47 @@ textarea {
   }
 }
 
+.loading {
+  position: relative;
+  &::after {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    content: ' .';
+    animation: dots 1s steps(5, end) infinite;
+    background-color: rgb(255, 255, 255, 0.4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 80px;
+    font-weight: bold;
+    color: #ffda4a;
+  }
+}
+
+@keyframes dots {
+  0%, 20% {
+    color: #ffda4a;
+    text-shadow:
+      .25em 0 0 #ffda4a,
+      .5em 0 0 #ffda4a;}
+  40% {
+    color: white;
+    text-shadow:
+      .25em 0 0 #ffda4a,
+      .5em 0 0 #ffda4a;}
+  60% {
+    text-shadow:
+      .25em 0 0 white,
+      .5em 0 0 #ffda4a;}
+  80%, 100% {
+    text-shadow:
+      .25em 0 0 white,
+      .5em 0 0 white;}
+}
+
 .animated-background {
   animation-duration: 3s;
   animation-fill-mode: forwards;
@@ -56,6 +97,31 @@ textarea {
   background-size: 100% 104px;
   height: 96px;
   position: relative;
+}
+
+.btn-tab {
+  display: flex;
+  width: 100%;
+  border-radius: 15px;
+  overflow: hidden;
+  font-family: "Yeseva One", sans-serif;
+  margin-bottom: 20px;
+  div {
+    flex: 1;
+    border: 1px solid #fff;
+    padding: 8px 25px;
+    font-weight: bold;
+    color: #000;
+    cursor: pointer;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    &.active {
+      background: #ffd52a;
+      border-color:#ffd52a;
+    }
+  }
 }
 
 .table-loading {
