--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -146,7 +146,7 @@ textarea {
 
 
 .bg-home {
-  background: url("~/assets/images/bg-home-page.png") #ffda4a no-repeat;
+  background: url("~/assets/images/bg-home-page.jpg") #ffda4a no-repeat;
   position: relative;
   background-size: cover;
   min-height: calc(100vh - 72px);
@@ -340,7 +340,7 @@ footer {
 }
 
 .banner-bottom {
-  background: url('~/assets/images/bg_kid.png') bottom no-repeat;
+  background: url('~/assets/images/bg_kid.jpg') bottom no-repeat;
   height: 42rem;
   position: relative;
   width: 100%;
