--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -121,7 +121,12 @@ textarea {
       background: #ffd52a;
       border-color:#ffd52a;
     }
+    @media screen and (max-width: 500px) {
+      font-size: 16px;
+      padding: 8px 10px;
+    }
   }
+ 
 }
 
 .table-loading {
