--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -8,6 +8,9 @@ html.wf-robotocondensed-n4-active.wf-robotocondensed-n7-active {
 .logo img {
   max-width: 100%;
   max-height: 100%;
+  &.thumb {
+    height: 180px;
+  }
 }
 .logo {
   height: 250px;
@@ -157,6 +160,12 @@ textarea {
   min-height: calc(100vh - 72px);
   display: flex;
   flex-direction: column;
+  &.bg-fund-info {
+    background: url("~/assets/images/bg-info.jpg");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: bottom;
+  }
 }
 
 .bg-form {
@@ -185,6 +194,32 @@ textarea {
     url("~/assets/images/pattern_fund_right.svg") right -6.5rem bottom 0rem no-repeat;
   background-size: 25rem;
   padding-bottom: 100px;
+  &.bolder{
+    background: url("~/assets/images/leaf-left.svg") left -10.5rem top 4rem no-repeat,
+    url("~/assets/images/leaf-right.svg") right -7rem top 50% no-repeat,
+    url("~/assets/images/leaf-left.svg") left -10.5rem bottom 0rem no-repeat;
+    background-size: 25rem;
+  }
+  &.bolder-1{
+    background: url("~/assets/images/leaf-left.svg") left -10.5rem top 4rem no-repeat,
+    url("~/assets/images/leaf-right.svg") right -7rem bottom 0 no-repeat;
+    background-size: 25rem;
+    @media screen and (max-width: 1380px) {
+      background-size: 25rem;
+    }
+  }
+  &.with-bottom {
+    background: url("~/assets/images/pattern_fund_left.svg") left -10rem top 2rem no-repeat,
+    url("~/assets/images/pattern_fund_right.svg") right -6.5rem top calc(100vh - 200px) no-repeat,
+    url('~/assets/images/bg_kid.jpg') bottom no-repeat;
+    background-size: 25rem, 25rem, 100%;
+    min-height: 1700px;
+  }
+
+
+  @media screen and (max-width: 769px) {
+    background: none !important;
+  }
 }
 
 .btn-defaut {
