--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -164,7 +164,7 @@ textarea {
     background: url("~/assets/images/bg-info.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: bottom;
+    background-position: top;
   }
 }
 
@@ -190,8 +190,8 @@ textarea {
   flex: 1;
   width: 100%;
   height: 100%;
-  background: url("~/assets/images/pattern_fund_left.svg") left -10rem top 2rem no-repeat,
-    url("~/assets/images/pattern_fund_right.svg") right -6.5rem bottom 0rem no-repeat;
+  background: url("~/assets/images/leaf-left.svg") left -10rem top 2rem no-repeat,
+    url("~/assets/images/leaf-right.svg") right -6.5rem bottom 0rem no-repeat;
   background-size: 25rem;
   padding-bottom: 100px;
   &.bolder{
@@ -209,8 +209,8 @@ textarea {
     }
   }
   &.with-bottom {
-    background: url("~/assets/images/pattern_fund_left.svg") left -10rem top 2rem no-repeat,
-    url("~/assets/images/pattern_fund_right.svg") right -6.5rem top calc(100vh - 200px) no-repeat,
+    background: url("~/assets/images/leaf-left.svg") left -10rem top 2rem no-repeat,
+    url("~/assets/images/leaf-right.svg") right -6.5rem top calc(100vh - 200px) no-repeat,
     url('~/assets/images/bg_kid.jpg') bottom no-repeat;
     background-size: 25rem, 25rem, 100%;
     min-height: 1700px;
